# wh00t_core

./: README.md  README.rst  pyproject.toml
tests/: test_wh00t_core.py
wh00t_core/: main.py
