[tool.poetry]
name = 'wh00t_core'
version = '0.5.2'
description = 'Core libraries shared amongst the wh00t connected projects'
authors = ['roboto84 <7658704+roboto84@users.noreply.github.com>']

[tool.poetry.dependencies]
python = '^3.10'
willow-core = {git = 'https://github.com/roboto84/willow_core.git', tag = 'v0.1.1'}

[tool.poetry.dev-dependencies]
pytest = '^6.2.5'

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'
